<resources>
    <string name="app_name">APEP To Day groep 4</string>
    <string name="mainText">Get your shit together man</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">UserName</string>
    <string name="fill_in_your_password">fill in your password</string>
    <string name="submit">submit</string>
    <string name="enter">enter</string>
    <string name="add_task">add task</string>
    <string name="edit_task">Edit task</string>
    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="choose_label">Choose Label</string>
    <string name="add_label">Add Label</string>
    <string name="update_label">Update Label</string>
    <string name="Current_Label_Name">Down below is your current label</string>
    <string name="Selected_Label_Name">Down below is your selected label</string>
    <string name="Current_Label_Name_Change">Change your current label here</string>
    <string name="Select_Label_Name_Change">Change your selected label here</string>
    <string name="New_Label_Name">New Label Name</string>
    <string name="New_Label_button">Done</string>
    <string name="Update_Label_button">Update</string>
    <string name="Back_Label_button">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="Change">Change</string>
    <string name="edit">Edit</string>
    <string name="label_name">Label Name</string>
    <string name="date_and_time">Date and time</string>


    <string name="mainActivity_welcome">Welcome by To-day</string>
    <string name="mainActivity_welcome1">Are you ready to make your day awesome?</string>
    <string name="mainActivity_welcome_register">Click down below to get started!</string>
    <string name="mainActivity_buttonRegister">Register</string>
    <string name="mainActivity_alreadyAccount">Already have a account?</string>
    <string name="mainActivity_buttonLogin">Login</string>
    <string name="mainActivity_doneTasks">Done tasks</string>
    <string name="mainActivity_LongClikMessage">Long click on tasks to see options</string>


    <string name="registerActivity_Title">Registration form</string>
    <string name="registerActivity_EnterName">Enter Name</string>
    <string name="registerActivity_EnterPassword">Enter Password</string>
    <string name="registerActivity_RepeatPassword">Repeat Password</string>
    <string name="registerActivity_EnterEmail">Enter Email</string>
    <string name="registerActivity_button">Register Account</string>

    <string name="LoginActivity_button">Login</string>
    <string name="LoginActivity_Enter_Email">Enter_Email</string>
    <string name="LoginActivity_Enter_Password">Enter Password</string>
    <string name="LoginActivity_Welcome_Text">Login down below</string>

    <string name="HomeActivity_Button_Logout">Log out</string>
    <string name="Add_Task_Welkom">Add your task down below</string>
    <string name="Add_Task_Welkom2">Work your way from top to bottom</string>

    <string name="FinishedActivity_homeButton">Home</string>
    <string name="FinishedActivity_DeleteButton">Delete All</string>
    <string name="appName">To much to do To Day</string>


    <string name="finishTask">Done</string>
    <string name="EditTask">Edit</string>
    <string name="deleteTask">Delete</string>
    <string name="showTask">Show</string>
    <string name="undoTask">Undo</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
    <string name="select_label">Select Label</string>
    <string name="delelteLabel">Delete</string>
    <string name="selectLabel">Select</string>
    <string name="deleteLabel">Delete</string>
    <string name="editLabel">Edit</string>
    <string name="addNewLabel">Add New Label</string>
    <string name="HintNewLabel">Fill in new label name</string>
    <string name="AddLabel_LongClikMessage">Long click on label to see options</string>
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="editTextDateTime">Edit Date and Time</string>
    <string name="empty" />


</resources>