<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".ShowTaskActivity">

    <TextView
        android:id="@+id/showTaskDetailsTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:text="@string/time"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTaskDetailsLabel" />

    <TextView
        android:id="@+id/showTaskDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/showTaskDetailsTime"
        app:layout_constraintStart_toStartOf="@+id/showTaskDetailsTime"
        app:layout_constraintTop_toBottomOf="@+id/showTaskDetailsDescription" />

    <TextView
        android:id="@+id/showTaskDetailsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/showTaskDetailsLabel"
        app:layout_constraintStart_toStartOf="@+id/showTaskDetailsLabel"
        app:layout_constraintTop_toBottomOf="@+id/showTaskDetailsTitle" />

    <TextView
        android:id="@+id/showTaskDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/showTaskDetailsDescription"
        app:layout_constraintStart_toStartOf="@+id/showTaskDetailsDescription"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>