<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity.EditTask">



    <TextView
        android:id="@+id/updateTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="141dp"
        android:text="@string/update_task"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTitleUpdate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="@string/title"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTekst" />

    <EditText
        android:id="@+id/editTextDiscriptionUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="@string/discription"
        android:ems="10"
        android:hint="@string/discription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitleUpdate" />

    <Button
        android:id="@+id/addLabelBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="53dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="addLabel"
        android:text="@string/add_label"
        app:layout_constraintBottom_toTopOf="@+id/editTaskBtnUpdate"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editTaskBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="271dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="updateTaskToDatebase"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dateTimeButnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="115dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="buttonDateTimePickerDialog"
        android:text="@string/date_and_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDiscriptionUpdate" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="36dp"
        android:entries="@android:array/phoneTypes"
        app:layout_constraintBaseline_toBaselineOf="@+id/addLabelBtnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/addLabelBtnUpdate"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>