<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity.AddTask">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="141dp"
        android:text="add task"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="@string/title"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="101dp"
        android:autofillHints="@string/discription"
        android:ems="10"
        android:hint="@string/discription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/addLabelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="53dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="addLabel"
        android:text="@string/add_label"
        app:layout_constraintBottom_toTopOf="@+id/editTaskBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="271dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="addTaskToDb"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dateTimeButn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="115dp"
        android:drawableLeft="@drawable/ic_mario_white"
        android:onClick="buttonDateTimePickerDialog"
        android:text="@string/date_and_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDiscription" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="36dp"
        android:entries="@android:array/phoneTypes"
        app:layout_constraintBaseline_toBaselineOf="@+id/addLabelBtn"
        app:layout_constraintEnd_toStartOf="@+id/addLabelBtn"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>